[package]
name = "anchor-amm-q3"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_amm_q3"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-sbf = []


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }


[dev-dependencies]
mollusk-svm = "0.4.0"
solana-program = "2.3.0"
solana-sdk = "2.3.1"
mollusk-svm-programs-token = "0.4.0"
