[package]
name = "anchor-amm-q3"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_amm_q3"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-sbf = []


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }


[dev-dependencies]
solana-sdk = "2.2.1"
solana-program-runtime = ">=2.2,<=2.2.1"
solana-feature-set = "^2.2.1"
litesvm = "0.6.1"
spl-token = "8.0.0"
spl-associated-token-account-client = "2.0.0"
